# CSC-4585

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  plot_scaling.gp  vcpkg-configuration.json  vcpkg.json
00_openmp_hello/: CMakeLists.txt
00_openmp_hello/src/: main.cpp
01_openmp_non_det/: CMakeLists.txt
01_openmp_non_det/src/: main.cpp
02_serial_pi/: CMakeLists.txt
02_serial_pi/src/: main.cpp
03_openmp_pi/: CMakeLists.txt
03_openmp_pi/src/: main.cpp
04_openmp_pi_critical/: CMakeLists.txt
04_openmp_pi_critical/src/: main.cpp
05_openmp_pi_parallel_for/: CMakeLists.txt
05_openmp_pi_parallel_for/src/: main.cpp
06_mpi_hello/: CMakeLists.txt
06_mpi_hello/src/: main.cpp
07_mpi_ping_pong/: CMakeLists.txt
07_mpi_ping_pong/src/: main.cpp
08_mpi_gol/: CMakeLists.txt  plot.py  sim.toml
08_mpi_gol/src/: main.cpp
